objects/Approval_Step__c.object
<CustomObject>
    <description>It define to whom an approval request is routed, as well as any actions that should be performed upon approval or rejection.</description>
    <fields>
        <fullName>Assigned_Approver__c</fullName>
        <description>Approver who will approver/reject the approval process.</description>
        <label>Assigned Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changed_By__c</fullName>
        <description>Who has updated the approval step</description>
        <label>Changed By</label>
        <picklist>
            <picklistValues>
                <fullName>Nitesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deep</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Criteria_1__c</fullName>
        <description>It consists first 255 characters of the approval step criteria.</description>
        <label>Criteria 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Criteria_2__c</fullName>
        <description>It consists part of approval step criteria that is after first 255 characters of the approval step criteria.</description>
        <label>Criteria 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Criteria__c</fullName>
        <description>Criteria for entering the approval step</description>
        <label>Criteria</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>It captures all the details about the approval step.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_to_Approval_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Approval process to which the approval step is related.</description>
        <label>Related to Approval Process</label>
        <referenceTo>Approval_Process__c</referenceTo>
        <relationshipLabel>Approval Steps</relationshipLabel>
        <relationshipName>Approval_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It consists of user story, change request, ticket which impacts the components.</description>
        <label>Request</label>
        <referenceTo>Requirement__c</referenceTo>
        <relationshipLabel>Approval Steps</relationshipLabel>
        <relationshipName>Approval_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Step_Number__c</fullName>
        <description>Step number.</description>
        <label>Step Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Approval Step</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Related_to_Approval_Process__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Approval Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>